Adding index.pug and project.pug dynamic information

--- a/views/layout.pug
+++ b/views/layout.pug
@@ -22,10 +22,10 @@ html(class="no-js" lang="en" dir="ltr")
 
             //- Add text here to describe who you are, what you do, and why you are so awesome.
             p.text-light
-              | Description
+              | After starting my career as a Project Manager at a Digital Marketing Agency, I fell in love with the world of software development
 
             //- Add about page route to the href below. 
-            a(href='') Learn More →
+            a(href='/about') Learn More →
 
     .off-canvas-content(data-off-canvas-content='')
       .title-bar.hide-for-large
