--- a/views/index.pug
+++ b/views/index.pug
@@ -5,11 +5,11 @@ block content
     div
 
       //- Add a title or heading like My Portfolio, or Hey, Potential Employers, or Let's make the web great together! 
-      h1 Let's make the web great together!
+      h1 Tired of boring software?
 
       //- Add a description for your portfolio, what this project is, it's purpose, what it's supposed to accomplish, etc. 
       p.lead.text-light
-        | Thanks for checking out my personal portfolio! I'll be adding to this frequently so check back soon fo more projects.
+        | Software should be exciting, engaging and user-friendly. Let's transform the web together
   article.grid-container.portfolio-index
     
     .grid-x.grid-margin-x.small-up-2.medium-up-2.large-up-3
@@ -23,9 +23,4 @@ block content
       //- Use a combination of interpolation and template literals as needed to dynamically generate the the routes in the href, as well as the img's src and the projects title.
       
       //- Here's what the Pug for each project example should look like. 
-
-      .cell
-        a(href='#')
-          img.thumbnail(src='https://placehold.it/550x550')
-          h5 Title
       
