Formatting all images to appropriate sizes

--- a/views/layout.pug
+++ b/views/layout.pug
@@ -22,7 +22,8 @@ html(class="no-js" lang="en" dir="ltr")
 
             //- Add text here to describe who you are, what you do, and why you are so awesome.
             p.text-light
-              | After starting my career as a Project Manager at a Digital Marketing Agency, I fell in love with the world of software development
+              | After starting my career as a Project Manager at a Digital Marketing Agency, I fell in love with the world of software development.
+              | And, as they say, "The rest is history"
 
             //- Add about page route to the href below. 
             a(href='/about') Learn More →
