--- a/views/about.pug
+++ b/views/about.pug
@@ -38,9 +38,9 @@ block content
           li ryan.m.luttrell@gmail.com
 
 
-        a.button.expanded(href='https://www.linkedin.com/in/ryan-luttrell/') LinkedIn
-        a.button.expanded(href='https://github.com/RyanLuttrell') GitHub
-        a.button.expanded(href='https://www.instagram.com/standardryan/') Instagram
+        a.button.expanded(href='https://www.linkedin.com/in/ryan-luttrell/' target="_blank") LinkedIn
+        a.button.expanded(href='https://github.com/RyanLuttrell' target="_blank") GitHub
+        a.button.expanded(href='https://www.instagram.com/standardryan/' target="_blank") Instagram
   nav.grid-container.portfolio-breadcrumb
     a(href='/') ← Back
   
